<resources>
    <string name="app_name">Hw_32_ConstraintLayout_Poster</string>
    <!--Movie 1-->
    <string name="movie_title">Blade Runner 2049</string>
    <string name="director_label">Director:</string>
    <string name="director">Denis Villeneuve</string>
    <string name="move_short_description">Yuong Blade Runner K`s discovery of a long-buried secret leads him to track down former Blade Runner Rick Deckard, who`s been missing for thirty years</string>
    <string name="actors_label">Actors</string>
    <string name="actor_1">Harrison Ford</string>
    <string name="actor_2">Ryan Gosling</string>
    <string name="actor_3">Ana de Maris</string>
    <string name="actor_4">Dave Bautista</string>
    <string name="like">Like</string>
    <string name="watch">Watch</string>
    <string name="share">Share</string>

    <!--Movie 2-->
    <string name="movie_2_title">Freedom Writers</string>
    <string name="movie_2_director_label">Director:</string>
    <string name="movie_2_director">Richard LaGravenese</string>
    <string name="movie_2_producer_label">Producer:</string>
    <string name="movie_2_producer_1">Danny DeVito</string>
    <string name="movie_2_producer_2">Michael Shamberg</string>
    <string name="movie_2_producer_3">Stacey Sher</string>
    <string name="movie_2_writer_label">Writer:</string>
    <string name="movie_2_writer_1">Freedom Writers(book)</string>
    <string name="movie_2_writer_2">Erin Gruwell</string>
    <string name="movie_2_description">A dedicated teacher (Hilary Swank) in a racially divided Los Angeles school has a class of at-risk teenagers deemed incapable of learning. Instead of giving up, she inspires her students to take an interest in their education and planning their future. She assigns reading material that relates to their lives and encourages them all to keep journals.</string>
    <string name="movie_2_actors_label">Actors</string>
    <string name="movie_2_actor_1">Hilary Swank</string>
    <string name="movie_2_actor_2">Jason Finn</string>
    <string name="movie_2_actor_3">Scott Glenn</string>
    <string name="movie_2_actor_4">Deance Wyatt</string>
    <string name="movie_2_actor_5">April Lee Hernandez</string>
    <string name="movie_2_actor_6">Jaclyn Ngan</string>
    <string name="movie_2_like">Like</string>
    <string name="movie_2_watch">Watch</string>
    <string name="movie_2_share">Share</string>
    <string name="movie_2_comment">Comment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
